--- a/styles.css
+++ b/styles.css
@@ -72,11 +72,11 @@ html {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  filter: blur(16px);
+  filter: blur(30px);
   z-index: -1;
 }
 
-/* TEXT */
+
 .main h1 {
   font-size: 100px;
   margin-bottom: 10px;
@@ -127,18 +127,18 @@ html {
 
 .card {
   width: 720px;
-  background: transparent;
+  background:slategrey;
   color: #fbfbfb;
   border-radius: 18px;
   padding: 28px;
   text-align: center;
 
-  box-shadow: 0 18px 40px rgba(242, 241, 241, 0.25);
+  box-shadow: 0 18px 40px rgba(0, 0, 0, 0.25);
 }
 
 .card img {
   width: 100%;
-  height: 240px;
+  height: 440px;
   object-fit: cover;
   border-radius: 14px;
 }
@@ -189,12 +189,15 @@ html {
 
 .alert {
   width: 32vh;
-  background:transparent;
+  background: transparent;
+  /* background-color: gray; */
   padding: 82px;
   border-radius: 14px;
+  border: 4px solid rgb(0, 0, 0);
   box-shadow: 0 12px 30px rgba(124, 14, 14, 0.25);
   font-size: 70px;
 }
+
 .op{
     font-weight: bolder;
     color: #c0392b;
@@ -229,4 +232,66 @@ html {
 
   box-shadow: 0 4px 10px rgba(0,0,0,0.15);
   transition: background 0.2s ease, transform 0.2s ease;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+.login-page {
+  padding-top: 260px;
+}
+
+.login-box {
+  margin-top: 80px;
+  width: 900px;
+  padding: 90px;
+  background: rgba(0, 0, 0, 0.65);
+  backdrop-filter: blur(12px);
+  border-radius: 30px;
+  box-shadow: 0 30px 80px rgba(0,0,0,0.5);
+  display: flex;
+  flex-direction: column;
+  gap: 45px;
+}
+
+.login-box input {
+  width: 100%;
+  padding: 30px 36px;
+  font-size: 45px;
+  border-radius: 18px;
+  border: none;
+  outline: none;
+}
+
+.login-submit {
+  width: 100%;
+  padding: 32px;
+  font-size: 45px;
+  border-radius: 18px;
+  border: none;
+  background: #0c9310;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.login-text {
+  font-size: 42px;
+  color: white;
+  text-align: center;
+}
+
+.login-text a {
+  color: #ff6b5a;
+  text-decoration: none;
+  font-weight: bold;
 }
