--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ html {
   
 }
 .nav-text{
-  margin-top: 6px; 
+  margin-top: -4px; 
 }
 
 .main {
@@ -158,7 +158,7 @@ html {
 
 .emergency h2 {
   display: inline-block;
-  color: white;
+  color: rgba(12, 2, 2, 0.763);
   font-size: 28px;
   margin-bottom: 20px;
 }
@@ -169,6 +169,11 @@ html {
   height: 2px;
   background: #ff6b5a;
   margin-top: 6px;
+}
+
+.emergency img {
+  height: 32px;
+  padding-top: 9px;
 }
 
 .alert-row {
@@ -206,6 +211,7 @@ html {
   text-decoration: none;
   font-weight: 500;
   box-shadow: 0 3px 8px rgba(0,0,0,0.15);
+  margin-top: -8px;
 }
 
 .login-page {
@@ -256,4 +262,19 @@ html {
   color: #ff6b5a;
   text-decoration: none;
   font-weight: bold;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-weight: bold;
+  font-size: 25px;
+}
+
+.logo img {
+  width: 60px;
+  height: 60px;
+  object-fit: contain;
+
 }
