--- a/styles.css
+++ b/styles.css
@@ -330,3 +330,8 @@ html {
   text-decoration: none;
   border-radius: 5px;
 }
+.emer{
+  font-weight: bolder;
+  margin-top: 4px;
+  color: black;
+}
